--- a/src/components/styles/Searchbar.module.css
+++ b/src/components/styles/Searchbar.module.css
@@ -52,6 +52,15 @@
   opacity: 1;
 }
 
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
+
 .SearchFormButtonLabel {
   position: absolute;
   width: 1px;
