--- a/src/components/styles/Searchbar.module.css
+++ b/src/components/styles/Searchbar.module.css
@@ -38,10 +38,6 @@
   width: 48px;
   height: 48px;
   border: 0;
-  background-size: 40%;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.6;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
   outline: none;
@@ -57,7 +53,12 @@
   height: 1em;
   stroke-width: 0;
   stroke: currentColor;
-  fill: currentColor;
+  fill: grey;
+}
+
+.menu {
+  width: 50px;
+  stroke: blue;
 }
 
 .SearchFormButtonLabel {
