--- a/src/components/styles/Searchbar.module.css
+++ b/src/components/styles/Searchbar.module.css
@@ -49,7 +49,7 @@
   opacity: 1;
 }
 
-.icon {
+.SearchFormButtonIcon {
   display: block;
   margin: 0;
   width: 36px;
@@ -57,18 +57,6 @@
   stroke-width: 0;
   stroke: none;
   fill: grey;
-}
-
-.SearchFormButtonLabel {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0;
 }
 
 .SearchFormInput {
