update load more button styles

--- a/src/components/styles/Button.module.css
+++ b/src/components/styles/Button.module.css
@@ -1,6 +1,12 @@
 /*
 * Стили компонента Button (Load more)
 */
+.ButtonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .Button {
   padding: 8px 16px;
   border-radius: 2px;
