--- a/src/components/styles/ImageFinder.module.css
+++ b/src/components/styles/ImageFinder.module.css
@@ -35,3 +35,9 @@ img {
   grid-gap: 16px;
   padding-bottom: 24px;
 }
+
+.NoMoreMessage {
+  width: 50%;
+  text-align: center;
+  color: darkgrey;
+}
