--- a/src/components/styles/ImageFinder.module.css
+++ b/src/components/styles/ImageFinder.module.css
@@ -37,7 +37,10 @@ img {
 }
 
 .NoMoreMessage {
-  width: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   color: darkgrey;
 }
